# mobx-react-observer

./: README.md  package-lock.json  package.json  renameToCjs.js  tsconfig.json
.github/workflows/: release.yml
src/: babel-plugin.ts  swc-plugin.test.ts  swc-plugin.ts  transform.test.ts  transform.ts
swc/: Cargo.toml
swc/swc-plugin-observing-components/: Cargo.toml
swc/swc-plugin-observing-components/src/: lib.rs
swc/swc-plugin-observing-components/transform/: Cargo.toml
swc/swc-plugin-observing-components/transform/src/: lib.rs
wasm/: observer.wasm
